// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> component renders a tooltip with the direction as bottom and background as full 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: calc(200px + 2 * 8px);
  overflow-wrap: break-word;
  padding: 8px;
  background-color: #292929;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
  color: #FFFFFF;
  border-radius: 0px;
  text-align: left;
  white-space: initial;
  position: absolute;
  z-index: 11;
  top: 12px;
  left: 0px;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-0:after {
  content: "";
  position: absolute;
  border: 0px solid transparent;
}

.emotion-0:after {
  bottom: 100%;
  left: 50%;
  margin-left: -7px;
  border-width: 0px 7px 8px 7px;
  border-bottom-color: #292929;
}

<div
  class="emotion-0 emotion-1"
  data-testid="tooltip-content"
  direction="bottom"
  role="tooltip"
>
  Some content
</div>
`;

exports[`<Tooltip /> component renders a tooltip with the direction as left and background as opacity 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: calc(200px + 2 * 8px);
  overflow-wrap: break-word;
  padding: 8px;
  background-color: #292929;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
  color: #FFFFFF;
  border-radius: 0px;
  text-align: left;
  white-space: initial;
  position: absolute;
  z-index: 11;
  top: 0px;
  left: 0px;
  opacity: 80%;
  -webkit-transform: translate(-100%, -50%);
  -moz-transform: translate(-100%, -50%);
  -ms-transform: translate(-100%, -50%);
  transform: translate(-100%, -50%);
}

.emotion-0:after {
  content: "";
  position: absolute;
  border: 0px solid transparent;
}

.emotion-0:after {
  top: 50%;
  left: 100%;
  margin-top: -7px;
  border-width: 7px 0px 7px 8px;
  border-left-color: #292929;
}

<div
  class="emotion-0 emotion-1"
  data-testid="tooltip-content"
  direction="left"
  role="tooltip"
>
  Some content
</div>
`;

exports[`<Tooltip /> component renders a tooltip with the direction as right and background as opacity 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: calc(200px + 2 * 8px);
  overflow-wrap: break-word;
  padding: 8px;
  background-color: #292929;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
  color: #FFFFFF;
  border-radius: 0px;
  text-align: left;
  white-space: initial;
  position: absolute;
  z-index: 11;
  top: 0px;
  left: 12px;
  opacity: 80%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.emotion-0:after {
  content: "";
  position: absolute;
  border: 0px solid transparent;
}

.emotion-0:after {
  top: 50%;
  right: 100%;
  margin-top: -7px;
  border-width: 7px 8px 7px 0px;
  border-right-color: #292929;
}

<div
  class="emotion-0 emotion-1"
  data-testid="tooltip-content"
  direction="right"
  role="tooltip"
>
  Some content
</div>
`;

exports[`<Tooltip /> component renders a tooltip with the direction as top and background as full 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: calc(200px + 2 * 8px);
  overflow-wrap: break-word;
  padding: 8px;
  background-color: #292929;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),0px 1px 2px -1px rgba(0, 0, 0, 0.1);
  color: #FFFFFF;
  border-radius: 0px;
  text-align: left;
  white-space: initial;
  position: absolute;
  z-index: 11;
  top: 0px;
  left: 0px;
  -webkit-transform: translate(-50%, -100%);
  -moz-transform: translate(-50%, -100%);
  -ms-transform: translate(-50%, -100%);
  transform: translate(-50%, -100%);
}

.emotion-0:after {
  content: "";
  position: absolute;
  border: 0px solid transparent;
}

.emotion-0:after {
  top: 100%;
  left: 50%;
  margin-left: -7px;
  border-width: 8px 7px 0px 7px;
  border-top-color: #292929;
}

<div
  class="emotion-0 emotion-1"
  data-testid="tooltip-content"
  direction="top"
  role="tooltip"
>
  Some content
</div>
`;
